[tool.poetry]
name = "relist"
version = "0.1.0"
description = "Automatically relist postings on online marketplaces"
authors = ["Matt Potok <potok@mattpotok.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
tomlkit = "^0.11.1"
tabulate = "^0.8.10"
colorama = "^0.4.5"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[tool.poetry.scripts]
relist = "relist.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
